--- a/.github/workflows/publish-earthly.yml
+++ b/.github/workflows/publish-earthly.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential wget curl
+
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |
           branch=""
