fix: Update crate name and references

--- a/contrib/docker-compose.yaml
+++ b/contrib/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     build: ../.
     container_name: indexer
     environment:
-      - RUST_LOG="namada_prototype=debug"
+      - RUST_LOG="namadexer=debug"
       - INDEXER_CONFIG_PATH=/app/config/Settings.toml
     volumes:
       - ../config:/app/config
@@ -27,7 +27,7 @@ services:
     build: ../.
     container_name: server
     environment:
-      - RUST_LOG="namada_prototype=debug"
+      - RUST_LOG="namadexer=debug"
       - INDEXER_CONFIG_PATH=/app/config/Settings.toml
     volumes:
        - ../config:/app/config
