--- a/config/Settings.toml
+++ b/config/Settings.toml
@@ -1,7 +1,8 @@
 log_level = "info"
+network = "public-testnet-12"
 
 [database]
-host = "localhost"
+host = "postgres"
 user = "postgres"
 password = "wow"
 dbname = "blockchain"
