--- a/config/Settings.toml
+++ b/config/Settings.toml
@@ -2,7 +2,7 @@ log_level = "info"
 network = "public-testnet-14"
 
 [database]
-host = "0.0.0.0:5435"
+host = "localhost"
 user = "postgres"
 password = "wow"
 dbname = "blockchain"
@@ -16,7 +16,7 @@ serve_at = "0.0.0.0"
 port = 30303
 
 [indexer]
-tendermint_addr = "63.32.210.222"
+tendermint_addr = "127.0.0.1"
 port = 26657
 
 [jaeger]
