--- a/config/Settings.toml
+++ b/config/Settings.toml
@@ -1,8 +1,8 @@
 log_level = "info"
-network = "public-testnet-12"
+network = "public-testnet-14"
 
 [database]
-host = "postgres"
+host = "localhost"
 user = "postgres"
 password = "wow"
 dbname = "blockchain"
