--- a/.github/workflows/publish-earthly.yml
+++ b/.github/workflows/publish-earthly.yml
@@ -8,6 +8,8 @@ on:
       - main
       - master
       - dev
+  pull_request:
+    branches: ["*"]
   release:
     types:
       - created
@@ -41,6 +43,7 @@ jobs:
           git checkout -b "$branch" || true
 
       - name: Login to Docker Hub
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
@@ -57,6 +60,13 @@ jobs:
 
       - name: Earthly version
         run: earthly --version
+
+      - name: Run build (PR)
+        # Based on https://docs.github.com/en/actions/learn-github-actions/contexts#example-usage-of-the-github-context
+        if: ${{ github.event_name == 'pull_request' }}
+        env:
+          EARTHLY_PUSH: False
+        run: earthly --ci +all
 
       - name: Run build (branch) and publish
         if: ${{ github.event_name != 'pull_request' }}
