--- a/.github/workflows/publish-earthly.yml
+++ b/.github/workflows/publish-earthly.yml
@@ -43,6 +43,7 @@ jobs:
           git checkout -b "$branch" || true
 
       - name: Login to Docker Hub
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
