--- a/.github/workflows/publish-earthly.yml
+++ b/.github/workflows/publish-earthly.yml
@@ -21,19 +21,21 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, linux, x64]
-    env:
-      EARTHLY_BUILDKIT_HOST: tcp://buildkit.zondax.dev:8372
+    container:
+      image: earthly/earthly:v0.7.21
+      env:
+        # Internal buildkit link reachable from internal runners
+        EARTHLY_BUILDKIT_HOST: tcp://buildkit-builder-runners-earthly-buildkit:8372
+        # Exposed buildkit link reachable from internal runners and warp vpn
+        #EARTHLY_BUILDKIT_HOST := tcp://buildkit.zondax.dev:8372
+        NO_BUILDKIT: 1
+      options: --tty
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential wget curl
-
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |
+          git config --global --add safe.directory "*"
           branch=""
           if [ -n "$GITHUB_HEAD_REF" ]; then
             branch="$GITHUB_HEAD_REF"
@@ -41,33 +43,24 @@ jobs:
             branch="${GITHUB_REF##*/}"
           fi
           git checkout -b "$branch" || true
-
-      - name: Login to Docker Hub
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Download latest earthly
-        run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.7.11/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
-
       - name: Earthly bootstrap and configure
         run: |
-          earthly bootstrap --no-buildkit
-          earthly config global.tls_enabled false
           earthly config global.disable_analytics true
-
-      - name: Earthly version
-        run: earthly --version
-
+          earthly config global.tls_enabled false
+          earthly --version
+          earthly bootstrap
       - name: Run build (PR)
         # Based on https://docs.github.com/en/actions/learn-github-actions/contexts#example-usage-of-the-github-context
         if: ${{ github.event_name == 'pull_request' }}
         env:
           EARTHLY_PUSH: False
         run: earthly --ci +all
-
+      - name: Login to Docker Hub
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Run build (branch) and publish
         if: ${{ github.event_name != 'pull_request' }}
         run: earthly --ci --push +all
