--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -8,7 +8,7 @@ on:
       - 'Cargo.lock'
 jobs:
   security_audit:
-    runs-on: [self-hosted, linux, x64]
+    runs-on: zondax-runners
     steps:
       - uses: actions/checkout@v3
       - uses: EmbarkStudios/cargo-deny-action@v1
