--- a/deny.toml
+++ b/deny.toml
@@ -8,8 +8,7 @@ ignore = [
     "RUSTSEC-2021-0076",
     # No safe update at the moment, we can keep an eye on them to 
     # enable this checks, once they are solved by upstream dependencies.
-    "RUSTSEC-2023-0033",
+    # "RUSTSEC-2023-0033",
     "RUSTSEC-2021-0041",
-    "RUSTSEC-2023-0052"
+    # "RUSTSEC-2023-0052"
 ]
-
