--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ tendermint-config = "0.34.0"
 tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
 tendermint-proto = "0.34.0"
 clap = { version = "4.4.2", features = ["derive", "env"] }
+ureq = "2.9.1"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = [
