--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,47 +15,58 @@ path = "src/bin/indexer.rs"
 [dependencies]
 getrandom = { version = "0.2" }
 async-trait = "0.1.51"
-namada = { git = "https://github.com/anoma/namada", tag="v0.23.0", default-features = false, features = ["abciplus", "namada-sdk", "http-client"] }
-rand = {version = "0.8", default-features = false}
-rand_core = {version = "0.6", default-features = false}
-tokio = {version = "1.26.0", features = ["rt-multi-thread"]}
+namada_sdk = { git = "https://github.com/anoma/namada", rev = "v0.28.1" }
+rand = { version = "0.8", default-features = false }
+rand_core = { version = "0.6", default-features = false }
+tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
 hex = { version = "0.4", features = ["serde"] }
 futures-util = { version = "0.3", features = ["sink"] }
 bytes = "1.0"
 time = "0.3"
-tracing-subscriber = { version = "0.3.17", features = ["fmt", "std", "env-filter"] }
+tracing-subscriber = { version = "0.3.17", features = [
+    "fmt",
+    "std",
+    "env-filter",
+] }
 tracing = { version = "0.1.37", features = ["attributes"] }
 serde = { version = "1.0", features = ["derive"] }
-config = { version = "0.13.3", features = ["toml", "serde_json"], default-features = false }
+config = { version = "0.13.3", features = [
+    "toml",
+    "serde_json",
+], default-features = false }
 axum = { version = "0.6.18", features = ["tracing", "tokio", "json", "query"] }
 serde_derive = "1.0.164"
 thiserror = "1.0.40"
 serde_json = "1.0.97"
-borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
-sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "offline", "migrate"] }
-prost = "0.11.6"
-prost-types = "0.11.6"
+sqlx = { version = "0.6.3", features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "macros",
+    "json",
+    "offline",
+    "migrate",
+] }
+prost = "0.12.0"
+prost-types = "0.12.0"
 futures = "0.3.28"
 opentelemetry = "0.20.0"
 tracing-opentelemetry = "0.20.0"
 opentelemetry-jaeger = "0.19.0"
 opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
-axum-prometheus = { version = "0.4.0", optional = true}
+axum-prometheus = { version = "0.4.0", optional = true }
 metrics = "0.21.1"
-metrics-exporter-prometheus = {version = "0.12.1", optional = true}
-# temp - Tendermint fork of Helixdev doesn't include a fix for evidence json encoding
-tendermint = "0.33.0"
-tendermint-rpc = { version = "0.33.0", features = ["http-client"], default-features = false}
-tendermint-proto = "0.33.0"
-
-[patch.crates-io]
-borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
-borsh-derive = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
-borsh-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
-borsh-schema-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
+metrics-exporter-prometheus = { version = "0.12.1", optional = true }
+tendermint = "0.34.0"
+tendermint-config = "0.34.0"
+tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
+tendermint-proto = "0.34.0"
 
 [dev-dependencies]
-criterion = { version = "0.5.1", features = ["html_reports", "tokio", "async_futures"] }
+criterion = { version = "0.5.1", features = [
+    "html_reports",
+    "tokio",
+    "async_futures",
+] }
 httpc-test = "0.1.4"
 
 
