--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,13 @@ env:
 jobs:
   build:
     name: Build
-    runs-on: [self-hosted, linux, x64]
+    runs-on: zondax-runners
     steps:
+      - name: Install dependencies
+        run:  |
+          sudo apt-get update
+          sudo apt-get install -y curl protobuf-compiler build-essential
+
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -21,15 +26,18 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: build
         run:  |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler build-essential
           protoc --version
           cargo build --all-features
 
   fmt:
     name: Rustfmt
-    runs-on: [self-hosted, linux, x64]
+    runs-on: zondax-runners
     steps:
+      - name: Install dependencies
+        run:  |
+          sudo apt-get update
+          sudo apt-get install -y curl protobuf-compiler build-essential
+
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -42,15 +50,18 @@ jobs:
 
   clippy:
     name: Clippy
-    runs-on: [self-hosted, linux, x64]
+    runs-on: zondax-runners
     steps:
+      - name: Install dependencies
+        run:  |
+          sudo apt-get update
+          sudo apt-get install -y curl protobuf-compiler build-essential
+
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
       - name: Linting
         run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler build-essential
           protoc --version
           cargo clippy --all-features -- -D warnings
