--- a/.github/workflows/publish-earthly.yml
+++ b/.github/workflows/publish-earthly.yml
@@ -19,10 +19,10 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  build:
-    runs-on: [self-hosted, linux, x64]
+  build-earthly:
+    runs-on: zondax-runners
     container:
-      image: earthly/earthly:v0.7.21
+      image: earthly/earthly:v0.7.23
       env:
         # Internal buildkit link reachable from internal runners
         EARTHLY_BUILDKIT_HOST: tcp://buildkit-builder-runners-earthly-buildkit:8372
