--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: zondax-runners
     steps:
       - uses: actions/checkout@v3
-      - uses: EmbarkStudios/cargo-deny-action@v1
-      # - name: Scan for vulnerabilities
-      #   run: cargo deny check advisories
+      # - uses: EmbarkStudios/cargo-deny-action@v1
+      - name: Scan for vulnerabilities
+        run: cargo deny check advisories
