--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: zondax-runners
     steps:
       - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
       # - uses: EmbarkStudios/cargo-deny-action@v1
       - name: Scan for vulnerabilities
         run: cargo deny check advisories
