--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ tendermint = "0.34.0"
 tendermint-config = "0.34.0"
 tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
 tendermint-proto = "0.34.0"
+clap = { version = "4.4.2", features = ["derive", "env"] }
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = [
