--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ tendermint-rpc = { version = "0.35.0", features = ["http-client"] }
 tendermint-proto = "0.35.0"
 clap = { version = "4.4.2", features = ["derive", "env"] }
 ureq = "2.9.1"
+once_cell = "1.19.0"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = [
