--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -10,6 +10,10 @@ jobs:
   security_audit:
     runs-on: zondax-runners
     steps:
+      - name: Install dependencies
+        run:  |
+          sudo apt-get update
+          sudo apt-get install -y curl
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       # - uses: EmbarkStudios/cargo-deny-action@v1
