--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -3,9 +3,9 @@ on:
   schedule:
     - cron: '0 0 * * *'
   push:
-    paths:
-      - 'Cargo.toml'
-      - 'Cargo.lock'
+    # paths:
+    #   - 'Cargo.toml'
+    #   - 'Cargo.lock'
 jobs:
   security_audit:
     runs-on: zondax-runners
