--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -15,6 +15,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y curl
       - uses: actions/checkout@v3
+      - name: Install cargo-deny
+        run: cargo install --locked cargo-deny
       - uses: dtolnay/rust-toolchain@stable
       # - uses: EmbarkStudios/cargo-deny-action@v1
       - name: Scan for vulnerabilities
