--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install dependencies
         run:  |
           sudo apt-get update
-          sudo apt-get install -y curl
+          sudo apt-get install -y curl build-essential
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       # - uses: EmbarkStudios/cargo-deny-action@v1
